<resources>
    <string name="app_name">MyCalendar</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_in">Sign In</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="password">Password:</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name:</string>
</resources>
