<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itcr.mycalendar.SignInActivity">

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="471dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="21dp">

        <TextView
            android:id="@+id/txtV_Fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etxt_Fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtV_Nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname" />

        <EditText
            android:id="@+id/etxt_Nickname"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textV_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etxt_Password"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtV_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/etxt_ConfirmPassword"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.28" />

        <Button
            android:id="@+id/btn_SignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/sign_in"
            android:onClick="onClick"/>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
